# returnTrend

./: .gitignore  README.md  bot.py  config.py  main.py  pyproject.toml
bot/: __init__.py  bot.py  handlers.py
data/: articles.json  summaries.json  users.json
services/: __init__.py  llm.py  llm_service.py  news_processor.py  scraper.py
tasks/: __init__.py  news_tasks.py  scheduler.py
utils/: __init__.py  helpers.py  storage.py
