[project]
name = "returntrend-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.21.0",
    "aiohttp>=3.12.15",
    "asyncio-mqtt>=0.16.2",
    "beautifulsoup4>=4.13.4",
    "feedparser>=6.0.11",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.6",
    "lxml>=6.0.0",
    "ollama>=0.5.1",
    "openai>=1.97.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.3",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "ipython>=9.4.0",
    "jupyter>=1.1.1",
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
]
